# ai-core-system

./: .env.example  README.md  main.py  pyproject.toml
src/: agent.py  main.py
