[project]
name = "ai-core-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
